Added 'Home' tab and changed overall color scheme

--- a/Sync.Client/Sync.Client.csproj
+++ b/Sync.Client/Sync.Client.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Sync.Core\Sync.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
 </Project>
